--- a/assets/stylesheet/custom.css
+++ b/assets/stylesheet/custom.css
@@ -2195,7 +2195,7 @@ button.facial-buttons:hover{
 button.button-log:focus{
   outline: none;
 }
-@media only screen and (max-width:991px){
+/*@media only screen and (max-width:991px){
 .view-width{
   display:none;         
 }}
@@ -2203,4 +2203,4 @@ button.button-log:focus{
   .view-width{
     display:block;  
            
-  }}
+  }}*/
